# rust-passwords-store

./: Cargo.toml
src/: cli.rs  cli_processor.rs  custom_result.rs  encrypt.rs  main.rs  storage.rs
src/data/: data.json
