[package]
name = "rust_passwords_store"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = "0.8.1"
toml = "0.8.8"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.68"
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
chacha20poly1305 = "0.10"
hex = "0.4"
argon2 = "0.5"